Fixat en header och overflow i chattfönstret.

--- a/MiniFB/Content/Base.css
+++ b/MiniFB/Content/Base.css
@@ -370,7 +370,18 @@ li.twitter-like
     font-size: 14px;
 }
 
-.chat-content
+.chat-header
+{
+    width: 100%;
+    text-align: center;
+    background-color: #D4D4D4;
+    color: #000;
+    border-bottom: 1px solid #000;
+    height: auto;
+    display: none;
+}
+
+.chat-window
 {
     display: none;
     height: 200px;
@@ -382,7 +393,9 @@ li.twitter-like
     bottom: 38px;
 }
 
-.chat-content p
+.chat-content
 {
     margin: 10px 10px 10px 10px;
+    overflow: auto;
+    height: 80%;
 }
